--- a/src/componentes/AddTask/styles.css
+++ b/src/componentes/AddTask/styles.css
@@ -1,9 +1,26 @@
-.input-new-task {
-  /* display: flex; */
+.form-add-task{
+  display: flex;
   align-items: center;
+  text-align: center;
   justify-content: space-between;
+}
+
+.input-new-task {
+  display: flex; 
+  align-items: center;
+  justify-content: space-between; 
+  margin: auto 0;
   padding: 8px;
   background: rgb(75, 71, 71);
+  border-radius: 4px;
+  align-items: center;
+  
+}
+
+.button-add-task {
+  background-color: aqua;
+  width: 100px;
+  padding: 8px;
   border-radius: 4px;
   
 }
