feat: update color property for input-new-task component for better visibility

--- a/src/componentes/AddTask/styles.css
+++ b/src/componentes/AddTask/styles.css
@@ -12,6 +12,7 @@
   margin: auto 0;
   padding: 8px;
   background: rgb(75, 71, 71);
+  color: aliceblue;
   border-radius: 4px;
   align-items: center;
   
