--- a/src/componentes/AddTask/styles.css
+++ b/src/componentes/AddTask/styles.css
@@ -23,5 +23,8 @@
   width: 100px;
   padding: 8px;
   border-radius: 4px;
+  justify-items: center;
+  display: flex;
+  justify-content: space-evenly;
   
 }
